# nc-runtime

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cspell.json  nc_runtime.vcxproj  nc_runtime.vcxproj.filters  nc_runtime_test.sln  nc_runtime_test.vcxproj  nc_runtime_test.vcxproj.filters  package.xml  platform_detect.cmake
.github/workflows/: cmake.yml
include/nc-runtime/: basic_types.h  message_loop.h  nc_array.h  nc_data.h  nc_file.h  nc_log.h  nc_object.h  nc_stdlib.h  nc_string.h  nc_types.h  string_slice.h  timer.h
include/nc_runtime/: _raytrace.h  _rect.h  _rectf.h  base64.h  circular_array.h  costmap_inflator.h  dbscan.h  image_painter.h  json_node.h  json_setting_loader.h  line_parser.h  line_simplifier.h  mutex.h  nc_argparse.h  nc_array.h  nc_data.h  nc_event.h  nc_file.h  nc_gtest_extension.h  nc_image.h  nc_log.h  nc_math.h  nc_object.h  nc_polyline.h  nc_stdlib.h  nc_string.h  nc_task.h  nc_types.h  nc_vector.h  pose2.h  pose3.h  quaternion.h  quaternion_d.h  raytrace_line_f.h  ros_type_interop.h  string_slice.h  vector2.h  vector2i.h  vector3.h  vector3d.h  (+1 more)
src/: base64.cpp  costmap_inflator.cpp  costmap_inflator_imple.cpp  costmap_inflator_imple.h  json_node.cpp  json_setting_loader.cpp  line_parser.cpp  line_simplifier.cpp  message_loop_imple.cpp  message_loop_imple.h  nc_argparse.cpp  nc_array.cpp  nc_data.cpp  nc_event.cpp  nc_file.cpp  nc_gtest_extension.cpp  nc_image.cpp  nc_log.cpp  nc_math.cpp  nc_object.cpp  nc_polyline.cpp  nc_stdlib.cpp  nc_string.cpp  nc_task.cpp  nc_types.cpp  quaternion.cpp  quaternion_d.cpp  stdafx_nc_runtime.cpp  stdafx_nc_runtime.h  string_slice.cpp  timer.cpp  timer_manager.cpp  timer_manager.h
src/turbo_base64/: conf.h  turbob64.h  turbob64_.h  turbob64c.cpp  turbob64d.cpp
test/: base64_unittest.cpp  circular_array_unittest.cpp  costmap_inflator_unittest.cpp  dbscan_unittest.cpp  image_painter_unittest.cpp  json_node_unittest.cpp  json_setting_loader_unittest.cpp  line_parser_unittest.cpp  line_simplifier_unittest.cpp  main.cpp  message_loop_unittest.cpp  mutex_unittest.cpp  nc_array_unittest.cpp  nc_data_unittest.cpp  nc_event_unittest.cpp  nc_file_unittest.cpp  nc_image_unittest.cpp  nc_log_unittest.cpp  nc_math_unittest.cpp  nc_object_unittest.cpp  nc_polyline_unittest.cpp  nc_stdlib_unittest.cpp  nc_string_unittest.cpp  nc_task_unittest.cpp  pose2_unittest.cpp  pose3_unittest.cpp  quaternion_unittest.cpp  raytrace_line_f_unittest.cpp  stdafx_nc_runtime_test.cpp  stdafx_nc_runtime_test.h  string_slice_unittest.cpp  vector3_unittest.cpp
test_data/: config.json
vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  nc-runtime-test.vcxproj  nc-runtime-test.vcxproj.filters  nc-runtime.sln  nc-runtime.vcxproj  nc-runtime.vcxproj.filters
vs_visualizer/: nc-runtime.natvis
